--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^7.3.0",
     "@whop-sdk/core": "^1.0.0",
     "clsx": "^2.1.1",
