--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "6.2.1",
     "@whop/sdk": "^0.0.26",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -29,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "prisma": "6.2.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
